# aoc-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
aoc/: __init__.py  graph.py  hex.py  point.py  rect.py
src/aoc/: __init__.py  bit.py  graph.py  grid.py  hex.py  interval.py  linked_list.py  point.py  rect.py  tree.py  utils.py
tests/: test_grid.py  test_hex.py  test_interval.py  test_linked_list.py  test_point.py  test_rect.py  test_utils.py
